@@ -1,6 +1,8 @@
 
 Changes in JMurmel-1.2 relative to JMurmel-1.1
 
+ * argument to sleep is "seconds" (was: internal-time-units-per-second),
+   return value is nil (was: actually slept time in internal-time-units-per-second)
  * added more complete support for "let dynamic" and "let* dynamic"
    (before 1.2 only "let* dynamic" in interpreted code was supported)
  * added primitive functions assq, list*
